--- a/common/scala/src/main/resources/application.conf
+++ b/common/scala/src/main/resources/application.conf
@@ -53,3 +53,21 @@ kamon {
         kamon-statsd.auto-start = yes
     }
 }
+
+//whisk.logstore {
+//    log-driver-message = "Logs are stored externally."
+//    log-driver-opts = [
+//        { "--log-driver" : "fluentd" },
+//        { "--log-opt" : "tag=OW_CONTAINER" },
+//        { "--log-opt" : "fluentd-address=localhost:24225" }
+//    ]
+//    splunk {
+//        host = "splunk-host"
+//        port = 8080
+//        user = "splunk-user"
+//        password = "splunk-pass"
+//        index = "splunk-index"
+//        log-message-field = "log_message"
+//        activation-id-field = "activation_id"
+//    }
+//}
