Fixes #3612 - Add correct mode to nginx directory so non root users can run the build

--- a/ansible/roles/nginx/tasks/deploy.yml
+++ b/ansible/roles/nginx/tasks/deploy.yml
@@ -20,6 +20,7 @@
   file:
     path: "{{ nginx.confdir }}"
     state: directory
+    mode: 0777
   become: "{{ nginx.dir.become }}"
 
 - name: copy template from local to remote in nginx config directory
