--- a/ansible/roles/invoker/tasks/deploy.yml
+++ b/ansible/roles/invoker/tasks/deploy.yml
@@ -224,8 +224,8 @@
       "CONFIG_whisk_timeLimit_std": "{{ limit_action_time_std | default() }}"
       "CONFIG_whisk_activation_payload_max": "{{ limit_activation_payload | default() }}"
       "CONFIG_whisk_transactions_header": "{{ transactions.header }}"
-      "CONFIG_whisk_containerPool_maxConcurrent": "{{ invoker.maxConcurrent }}"
-
+      "CONFIG_whisk_containerPool_akkaClient": "{{ container_pool_akka_client | default('false') }}"
+      "CONFIG_whisk_containerFactory_containerArgs_extraArgs_env_0": "__OW_ALLOW_CONCURRENT={{ runtimes_enable_concurrency | default('false') }}"
 
 - name: extend invoker dns env
   set_fact:
